<resources>
    <string name="app_name">HalanChallenge</string>
    <string name="login">تسجيل الدخول</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمه السر</string>
    <string name="my_products">منتجاتي</string>
    <string name="more">المزيد</string>
    <string name="back">رجوع</string>
    <string name="product_details">تفاصيل المنتج</string>
    <string name="cash">كاش</string>
    <string name="pound">جنيه</string>
    <string name="description">الوصف</string>
    <string name="input_error">برجاء ملئ كافة البيانات، اسم المستخدم من ٦ الى ١٥ حرف</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>